# hardware-driver

./: .gitignore  CMakeLists.txt  CTestConfiguration.ini  DEVELOPER.md  DOCUMENTATION.md  Makefile  README.md  RELEASE_NOTES.md  build.sh  build_debian_package.sh  build_user_example.sh  build_usr_example.sh  create_release_package.sh  install.sh  joint_pro标准对外接口协议-V0.0.1.5.xlsx  libhardware_driver.so.1  package.xml  real_hardware_performance_report.csv  run_realtime_performance_tests.sh  test_callback.cpp  test_link.cpp  test_readme_example.cpp  test_simplified.cpp  夹爪控制使用说明.md  机器人软件栈OKR规划_2024Q3Q4.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  usage_question.md
.github/workflows/: ci.yml
arm_teach/: 1.txt
arm_teach/arm_teach/src/: CAN_Commands.txt  新协议.txt
arm_teach/arm_teach/src/dm_arm_v2_r/: CMakeLists.txt  package.xml
arm_teach/arm_teach/src/dm_arm_v2_r/launch/: display.launch.py  real_robot_display.launch.py
arm_teach/arm_teach/src/dm_arm_v2_r/meshes/: base_link.STL  endlink1.STL  endlink2.STL  link1.STL  link2.STL  link3.STL  link4.STL  link6.STL
arm_teach/arm_teach/src/dm_arm_v2_r/rviz/: real_robot_display.rviz
arm_teach/arm_teach/src/dm_arm_v2_r/urdf/: dm_arm_v2_r.csv  dm_arm_v2_r.urdf
arm_teach/arm_teach/src/dm_tools/: CMakeLists.txt  CMakeLists_standalone.txt  README.md  USAGE.md  package.xml
arm_teach/arm_teach/src/dm_tools/build_standalone/: Makefile  dev_sn
arm_teach/arm_teach/src/dm_tools/launch/: device_scanner.launch.py
arm_teach/arm_teach/src/dm_tools/src/: dev_sn.cpp  device_scanner_node.cpp
arm_teach/arm_teach/src/hardware_driver/: CMakeLists.txt  package.xml
arm_teach/arm_teach/src/hardware_driver/config/: hardware_driver_params.yaml
arm_teach/arm_teach/src/hardware_driver/include/data_convert/: data_converter.h
arm_teach/arm_teach/src/hardware_driver/include/hardware/: usb2canfd_manager.h
arm_teach/arm_teach/src/hardware_driver/include/protocol/: gripper_ctrl.h  raytron.h  raytron_motor_ctrl.h  teaching_device.h
arm_teach/arm_teach/src/hardware_driver/include/tools/: usb_device_finder.h
arm_teach/arm_teach/src/hardware_driver/launch/: hardware_driver.launch.py  hardware_driver_with_config.launch.py
arm_teach/arm_teach/src/hardware_driver/src/: hardware_driver.cpp  hardware_driver_node.cpp  main copy.cpp
arm_teach/arm_teach/src/hardware_driver/src/hardware/: usb2canfd_manager.cpp
arm_teach/arm_teach/src/hardware_driver/src/protocol/: gripper_ctrl.cpp  raytron_motor_ctrl.cpp  teaching_device.cpp
arm_teach/arm_teach/src/hardware_driver/src/tools/: list_devices.cpp  usb_device_finder.cpp
arm_teach/arm_teach/src/motor_driver/: CMakeLists.txt  CMakeLists_simple.txt  README_arm_controller.md  package.xml
arm_teach/arm_teach/src/motor_driver/config/: arm_config.yaml
arm_teach/arm_teach/src/motor_driver/launch/: smart_arm_controller.launch.py
arm_teach/arm_teach/src/motor_driver/src/: arm_controller_node.cpp  main.cpp
arm_teach/arm_teach/src/motor_driver/src/protocol/: damiao.cpp
cmake/: hardware_driverConfig.cmake.in
debian/: changelog  control  rules
docs/: ARCHITECTURE_CLEAN.md  CHANGELOG.md  DEVELOPER.md  DOCUMENTATION.md  EVENT_BUS_GUIDE.md  IAP_UPDATE_GUIDE.md  README.md  RELEASE_NOTES.md  SECURITY.md  async_trajectory_usage.md
docs/diagrams/: 01_overview.puml  02_control_flow.puml  03_feedback_flow.puml  04_event_dispatch.puml  05_thread_architecture.puml  06_queue_management.puml
examples/: example_async_trajectory.cpp  example_batch_control.cpp  example_event_motor_bus.cpp  example_gripper_control.cpp  example_iap_update.cpp  example_motor_callback.cpp  example_motor_callback_fb.cpp  example_motor_event_bus.cpp  example_motor_observer.cpp  example_motor_zero_position.cpp  simple_example.cpp
include/: hardware_driver.hpp
include/hardware_driver/: hardware_driver.hpp  hardware_utility.hpp
include/hardware_driver/bus/: bus_interface.hpp  canfd_bus_impl.hpp
include/hardware_driver/driver/: button_driver_interface.hpp  gripper_driver_interface.hpp  motor_driver_interface.hpp
include/hardware_driver/event/: event_bus.hpp  motor_events.hpp
include/hardware_driver/interface/: robot_hardware.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hardware_driver/share/hardware_driver/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/bus/: canfd_bus_impl.cpp  canfd_bus_impl.hpp  ethercat_bus_impl.hpp  usb2canfd_bus_impl.cpp  usb2canfd_bus_impl.hpp
src/driver/: button_driver_impl.cpp  button_driver_impl.hpp  gripper_driver_impl.cpp  gripper_driver_impl.hpp  motor_driver_impl.cpp  motor_driver_impl.hpp  omnipicker_gripper_driver_impl.cpp  omnipicker_gripper_driver_impl.hpp  pgc_gripper_driver_impl.cpp  pgc_gripper_driver_impl.hpp
src/event/: event_bridge.hpp
src/interface/: robot_hardware.cpp
src/protocol/: gripper_omnipicker_protocol.cpp  gripper_omnipicker_protocol.hpp  gripper_pgc_protocol.cpp  gripper_pgc_protocol.hpp  iap_protocol.cpp  iap_protocol.hpp  motor_protocol.cpp  motor_protocol.hpp  usb_class.h
test_cmake/: CMakeLists.txt  test_example.cpp
tests/: performance_test_framework.hpp  test_canfd_bus_integration.cpp  test_event_bus_api.cpp  test_hybrid_architecture.cpp  test_motor_driver_impl.cpp  test_motor_protocol.cpp  test_realtime_performance_real_hardware.cpp  test_robot_hardware.cpp  test_usb2canfd_bus.cpp
