<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hardware_driver</name>
  <version>0.2.0</version>
  <description>Hardware driver for DM-CANFD USB adapter with Raytron motor and gripper support</description>

  <!-- Maintainer and Author -->
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- ROS2 Build Tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Build Dependencies -->
  <build_depend>libusb-dev</build_depend>

  <!-- Runtime Dependencies -->
  <exec_depend>libusb-1.0</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Build Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
